--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,16 @@
         <dbcp.version>2.1.1</dbcp.version>
     </properties>
 
+    <dependency>
+
+        <groupId>jakarta.persistence</groupId>
+
+        <artifactId>jakarta.persistence-api</artifactId>
+
+        <version>3.1.0</version>
+
+    </dependency>
+    
     <dependencies>
         <!-- Spring -->
         <dependency>
